# permute-vcf

./: README.md  setup.cfg
permute_vcf/: contigs.py  main.py
tests/: test_contigs.py  test_main.py
tests/data/: test.vcf
