[metadata]
name = permute_vcf
version = attr: permute_vcf.VERSION
author = Edward S. Rice
description = randomly permute the locations of variants in a vcf
long_description = file: README.md
keywords = vcf, bioinformatics, permutations 
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    pyvcf3

[options.extras_require]
test =
    pytest
devel =
    flake8
    mypy
    black
    isort

[options.entry_points]
console_scripts =
    permute-vcf = permute_vcf.main:main

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88
extend-ignore = E203

[pycodestyle]
max-line-length = 88
